--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "directory-helpers",
   "version": "0.0.1",
-  "description": "",
-  "keywords": [],
+  "description": "A collection of helper methods for working with directories",
+  "keywords": ["es6", "es.next", "promise", "directories"],
   "homepage": "https://github.com/vinsonchuong/directory-helpers",
   "bugs": "https://github.com/vinsonchuong/directory-helpers/issues",
   "license": "MIT",
@@ -14,7 +14,6 @@
   ],
   "main": "src/index.js",
   "bin": {
-    "directory-helpers": "src/bin/directory-helpers.js"
   },
   "repository": {
     "type": "git",
@@ -25,11 +24,12 @@
     "test": "eslint && jasmine"
   },
   "dependencies": {
-    "node-promise-es6": "^0.3.1"
+    "node-promise-es6": "^0.3.1",
+    "fs-extra-promise-es6": "^0.1.1"
   },
   "devDependencies": {
     "dist-es6": "^0.1.10",
     "jasmine-es6": "^0.1.6",
-    "eslint-defaults": "^0.2.3"
+    "eslint-defaults": "^0.2.4"
   }
 }
