--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "directory-helpers",
   "version": "0.0.1",
   "description": "A collection of helper methods for working with directories",
-  "keywords": ["es6", "es.next", "promise", "directories"],
+  "keywords": [
+    "es6",
+    "es.next",
+    "promise",
+    "directories"
+  ],
   "homepage": "https://github.com/vinsonchuong/directory-helpers",
   "bugs": "https://github.com/vinsonchuong/directory-helpers/issues",
   "license": "MIT",
@@ -13,8 +18,7 @@
     "src"
   ],
   "main": "src/index.js",
-  "bin": {
-  },
+  "bin": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/vinsonchuong/directory-helpers"
