--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "node-promise-es6": "^0.3.1",
-    "fs-extra-promise-es6": "^0.1.1"
+    "fs-extra-promise-es6": "^0.1.1",
+    "esnext-async": "^0.0.1"
   },
   "devDependencies": {
     "dist-es6": "^0.1.10",
