Add debug logging for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
 - export DISPLAY=:99.0
 - Xvfb :99 -ac -screen 0 1024x768x8 &>/dev/null &
 - npm install -g npm
+script:
+  ls -lha $(which jasmine)
+  npm test
