Fix Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 - Xvfb :99 -ac -screen 0 1024x768x8 &>/dev/null &
 - npm install -g npm
 script:
-  ls -lha $(which jasmine)
-  npm test
+- ls -lha $(which jasmine)
+- npm test
