--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dist-es6": "^0.1.18",
     "node-promise-es6": "^0.3.2",
     "fs-extra-promise-es6": "^0.1.1",
-    "esnext-async": "^0.0.3"
+    "esnext-async": "^0.0.3",
+    "dedent": "^0.6.0"
   },
   "devDependencies": {
     "jasmine-es6": "^0.1.10",
