--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "fs-extra-promise-es6": "^0.1.1",
     "esnext-async": "^0.0.6",
     "dedent": "^0.6.0",
-    "resolve": "^1.1.7"
+    "resolve": "^1.1.7",
+    "glob": "^7.0.5"
   },
   "devDependencies": {
     "jasmine-es6": "^0.2.1",
