--- a/package.json
+++ b/package.json
@@ -24,22 +24,38 @@
     "url": "https://github.com/vinsonchuong/directory-helpers"
   },
   "scripts": {
-    "prepublish": "dist-es6",
-    "test": "eslint && jasmine"
+    "test": "standard --fix && ava"
   },
   "dependencies": {
-    "dist-es6": "^0.2.5",
-    "node-promise-es6": "^0.3.2",
-    "fs-extra-promise-es6": "^0.1.1",
-    "esnext-async": "^0.0.9",
+    "babel-runtime": "^6.22.0",
     "dedent": "^0.7.0",
-    "resolve": "^1.2.0",
-    "glob": "^7.1.1"
+    "esnext-async": "^0.0.9",
+    "fs-extra-promise-es6": "^0.1.1",
+    "glob": "^7.1.1",
+    "node-promise-es6": "^0.3.2",
+    "resolve": "^1.2.0"
   },
   "devDependencies": {
-    "jasmine-es6": "^0.4.0",
-    "eslint-defaults": "^0.3.2",
+    "ava": "^0.18.0",
+    "babel-plugin-package-name-import": "^1.0.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "node-fetch": "^1.6.3",
     "node-static": "^0.7.9",
-    "node-fetch": "^1.6.3"
+    "standard-esnext": "^1.0.6"
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": "babel-register"
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ],
+    "plugins": [
+      "transform-runtime",
+      "package-name-import"
+    ]
   }
 }
