--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/vinsonchuong/directory-helpers"
   },
   "scripts": {
-    "test": "standard --fix && ava"
+    "test": "flow && standard --fix && ava"
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
@@ -39,8 +39,10 @@
     "ava": "^0.18.0",
     "babel-plugin-package-name-import": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-flow": "^1.0.0",
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.22.0",
+    "flow-bin": "^0.39.0",
     "node-fetch": "^1.6.3",
     "node-static": "^0.7.9",
     "standard-esnext": "^1.0.6"
@@ -51,7 +53,8 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      "latest",
+      "flow"
     ],
     "plugins": [
       "transform-runtime",
